SetupVPC/VPC.json
{
	"AWSTemplateFormatVersion": "2010-09-09",
	"Description": "To Create the Platform VPC, with 2 Private and 2 Security Subnets",
	"Metadata": {
		"AWS::CloudFormation::Interface": {
			"ParameterGroups": [
				{
					"Label": {
						"default": "TaggingTheResources"
					},
					"Parameters": [
						"ProjectName",
						"Environment"
					]
				},
				{
					"Label": {
						"default": "VPC Configuration"
					},
					"Parameters": [
						"VpcCIDR",
						"AZs",
						"PublicSubnetAZ1CIDR",
						"PublicSubnetAZ2CIDR",
						"PublicSubnetAZ3CIDR",
						"PrivateSubnetAZ1CIDR",
						"PrivateSubnetAZ2CIDR",
						"PrivateSubnetAZ3CIDR"
					]
				}
			]
		}
	},
	"Parameters": {
		"VpcCIDR": {
			"Description": "CIDR for the VPC",
			"Type": "String",
			"Default": "10.210.0.0/16"
		},
		"AZs": {
			"Type": "List<AWS::EC2::AvailabilityZone::Name>",
			"Default": "us-east-1a,us-east-1b,us-east-1c",
			"Description": "Select Two AZs, where the Public and Private Subnets will be deployed."
		},
		"PublicSubnetAZ1CIDR": {
			"Description": "CIDR for Public Subnet in AZ1",
			"Type": "String",
			"Default": "10.210.10.0/24"
		},
		"PublicSubnetAZ2CIDR": {
			"Description": "CIDR for Public Subnet in AZ2",
			"Type": "String",
			"Default": "10.210.11.0/24"
		},
		"PublicSubnetAZ3CIDR": {
			"Description": "CIDR for Public Subnet in AZ3",
			"Type": "String",
			"Default": "10.210.12.0/24"
		},
		"PrivateSubnetAZ1CIDR": {
			"Description": "CIDR for private Subnet in AZ1",
			"Type": "String",
			"Default": "10.210.20.0/24"
		},
		"PrivateSubnetAZ2CIDR": {
			"Description": "CIDR for private Subnet in AZ2",
			"Type": "String",
			"Default": "10.210.21.0/24"
		},
		"PrivateSubnetAZ3CIDR": {
			"Description": "CIDR for private Subnet in AZ3",
			"Type": "String",
			"Default": "10.210.22.0/24"
		},
		"ProjectName": {
			"Description": "Enter the Project Name",
			"Default": "MyTestVPC",
			"Type": "String"
		},
		"Environment": {
			"Description": "Enter the Environment Name",
			"Default": "Prod",
			"Type": "String",
			"AllowedValues": [
				"Prod",
				"Dev",
				"Test",
				"QA",
				"Pre-Prod"
			]
		}
	},
	"Resources": {
		"MyVPC": {
			"Type": "AWS::EC2::VPC",
			"Properties": {
				"CidrBlock": {
					"Ref": "VpcCIDR"
				},
				"EnableDnsSupport": true,
				"EnableDnsHostnames": true,
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Ref": "ProjectName"
						}
					},
					{
						"Key": "Environment",
						"Value": {
							"Ref": "Environment"
						}
					}
				]
			}
		},
		"InternetGateway": {
			"Type": "AWS::EC2::InternetGateway",
			"Properties": {
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${ProjectName} IGW"
						}
					},
					{
						"Key": "Environment",
						"Value": {
							"Ref": "Environment"
						}
					}
				]
			}
		},
		"InternetGatewayAttachment": {
			"Type": "AWS::EC2::VPCGatewayAttachment",
			"Properties": {
				"InternetGatewayId": {
					"Ref": "InternetGateway"
				},
				"VpcId": {
					"Ref": "MyVPC"
				}
			}
		},
		"PublicSubnetAZ1": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "MyVPC"
				},
				"AvailabilityZone": {
					"Fn::Select": [
						"0",
						{
							"Ref": "AZs"
						}
					]
				},
				"CidrBlock": {
					"Ref": "PublicSubnetAZ1CIDR"
				},
				"MapPublicIpOnLaunch": true,
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${ProjectName} AZ1 - Public Subnet"
						}
					},
					{
						"Key": "ProjectName",
						"Value": {
							"Ref": "ProjectName"
						}
					},
					{
						"Key": "Environment",
						"Value": {
							"Ref": "Environment"
						}
					}
				]
			}
		},
		"PublicSubnetAZ2": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "MyVPC"
				},
				"AvailabilityZone": {
					"Fn::Select": [
						"1",
						{
							"Ref": "AZs"
						}
					]
				},
				"CidrBlock": {
					"Ref": "PublicSubnetAZ2CIDR"
				},
				"MapPublicIpOnLaunch": true,
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${ProjectName} AZ2 - Public Subnet"
						}
					},
					{
						"Key": "ProjectName",
						"Value": {
							"Ref": "ProjectName"
						}
					},
					{
						"Key": "Environment",
						"Value": {
							"Ref": "Environment"
						}
					}
				]
			}
		},
		"PublicSubnetAZ3": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "MyVPC"
				},
				"AvailabilityZone": {
					"Fn::Select": [
						"1",
						{
							"Ref": "AZs"
						}
					]
				},
				"CidrBlock": {
					"Ref": "PublicSubnetAZ3CIDR"
				},
				"MapPublicIpOnLaunch": true,
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${ProjectName} AZ3 - Public Subnet"
						}
					},
					{
						"Key": "ProjectName",
						"Value": {
							"Ref": "ProjectName"
						}
					},
					{
						"Key": "Environment",
						"Value": {
							"Ref": "Environment"
						}
					}
				]
			}
		},
		"PrivateSubnetAZ1": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "MyVPC"
				},
				"AvailabilityZone": {
					"Fn::Select": [
						"0",
						{
							"Ref": "AZs"
						}
					]
				},
				"CidrBlock": {
					"Ref": "PrivateSubnetAZ1CIDR"
				},
				"MapPublicIpOnLaunch": false,
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${ProjectName} AZ1 - Private Subnet"
						}
					},
					{
						"Key": "ProjectName",
						"Value": {
							"Ref": "ProjectName"
						}
					},
					{
						"Key": "Environment",
						"Value": {
							"Ref": "Environment"
						}
					}
				]
			}
		},
		"PrivateSubnetAZ2": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "MyVPC"
				},
				"AvailabilityZone": {
					"Fn::Select": [
						"1",
						{
							"Ref": "AZs"
						}
					]
				},
				"CidrBlock": {
					"Ref": "PrivateSubnetAZ2CIDR"
				},
				"MapPublicIpOnLaunch": false,
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${ProjectName} AZ2 - Private Subnet"
						}
					},
					{
						"Key": "ProjectName",
						"Value": {
							"Ref": "ProjectName"
						}
					},
					{
						"Key": "Environment",
						"Value": {
							"Ref": "Environment"
						}
					}
				]
			}
		},
		"PrivateSubnetAZ3": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "MyVPC"
				},
				"AvailabilityZone": {
					"Fn::Select": [
						"1",
						{
							"Ref": "AZs"
						}
					]
				},
				"CidrBlock": {
					"Ref": "PrivateSubnetAZ3CIDR"
				},
				"MapPublicIpOnLaunch": false,
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${ProjectName} AZ3 - Private Subnet"
						}
					},
					{
						"Key": "ProjectName",
						"Value": {
							"Ref": "ProjectName"
						}
					},
					{
						"Key": "Environment",
						"Value": {
							"Ref": "Environment"
						}
					}
				]
			}
		},
		"NatGateway1EIP": {
			"Type": "AWS::EC2::EIP",
			"DependsOn": "InternetGatewayAttachment",
			"Properties": {
				"Domain": {
					"Ref": "ProjectName"
				}
			}
		},
		"NatGateway2EIP": {
			"Type": "AWS::EC2::EIP",
			"DependsOn": "InternetGatewayAttachment",
			"Properties": {
				"Domain": {
					"Ref": "ProjectName"
				}
			}
		},
		"NatGateway3EIP": {
			"Type": "AWS::EC2::EIP",
			"DependsOn": "InternetGatewayAttachment",
			"Properties": {
				"Domain": {
					"Ref": "ProjectName"
				}
			}
		},
		"NatGateway1": {
			"Type": "AWS::EC2::NatGateway",
			"Properties": {
				"AllocationId": {
					"Fn::GetAtt": [
						"NatGateway1EIP",
						"AllocationId"
					]
				},
				"SubnetId": {
					"Ref": "PublicSubnetAZ1"
				},
				"Tags": [
					{
						"Key": "ProjectName",
						"Value": {
							"Ref": "ProjectName"
						}
					},
					{
						"Key": "Environment",
						"Value": {
							"Ref": "Environment"
						}
					}
				]
			}
		},
		"NatGateway2": {
			"Type": "AWS::EC2::NatGateway",
			"Properties": {
				"AllocationId": {
					"Fn::GetAtt": [
						"NatGateway2EIP",
						"AllocationId"
					]
				},
				"SubnetId": {
					"Ref": "PublicSubnetAZ2"
				},
				"Tags": [
					{
						"Key": "ProjectName",
						"Value": {
							"Ref": "ProjectName"
						}
					},
					{
						"Key": "Environment",
						"Value": {
							"Ref": "Environment"
						}
					}
				]
			}
		},
		"NatGateway3": {
			"Type": "AWS::EC2::NatGateway",
			"Properties": {
				"AllocationId": {
					"Fn::GetAtt": [
						"NatGateway3EIP",
						"AllocationId"
					]
				},
				"SubnetId": {
					"Ref": "PublicSubnetAZ3"
				},
				"Tags": [
					{
						"Key": "ProjectName",
						"Value": {
							"Ref": "ProjectName"
						}
					},
					{
						"Key": "Environment",
						"Value": {
							"Ref": "Environment"
						}
					}
				]
			}
		},
		"PublicRouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "MyVPC"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${ProjectName} Public Routes to Internet"
						}
					},
					{
						"Key": "ProjectName",
						"Value": {
							"Ref": "ProjectName"
						}
					},
					{
						"Key": "Environment",
						"Value": {
							"Ref": "Environment"
						}
					}
				]
			}
		},
		"DefaultPublicRoute": {
			"Type": "AWS::EC2::Route",
			"DependsOn": "InternetGatewayAttachment",
			"Properties": {
				"RouteTableId": {
					"Ref": "PublicRouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"GatewayId": {
					"Ref": "InternetGateway"
				}
			}
		},
		"PrivateRoute1": {
			"Type": "AWS::EC2::Route",
			"DependsOn": "InternetGatewayAttachment",
			"Properties": {
				"RouteTableId": {
					"Ref": "PrivateRouteTable1"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {
					"Ref": "NatGateway1"
				}
			}
		},
		"PrivateRoute2": {
			"Type": "AWS::EC2::Route",
			"DependsOn": "InternetGatewayAttachment",
			"Properties": {
				"RouteTableId": {
					"Ref": "PrivateRouteTable2"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {
					"Ref": "NatGateway2"
				}
			}
		},
		"PrivateRoute3": {
			"Type": "AWS::EC2::Route",
			"DependsOn": "InternetGatewayAttachment",
			"Properties": {
				"RouteTableId": {
					"Ref": "PrivateRouteTable3"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {
					"Ref": "NatGateway3"
				}
			}
		},
		"PrivateRouteTable1": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "MyVPC"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${ProjectName}- Private Routes (AZ1)"
						}
					},
					{
						"Key": "ProjectName",
						"Value": {
							"Ref": "ProjectName"
						}
					},
					{
						"Key": "Environment",
						"Value": {
							"Ref": "Environment"
						}
					}
				]
			}
		},
		"PrivateRouteTable2": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "MyVPC"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${ProjectName}- Private Routes (AZ2)"
						}
					},
					{
						"Key": "ProjectName",
						"Value": {
							"Ref": "ProjectName"
						}
					},
					{
						"Key": "Environment",
						"Value": {
							"Ref": "Environment"
						}
					}
				]
			}
		},
		"PrivateRouteTable3": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "MyVPC"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Sub": "${ProjectName}- Private Routes (AZ3)"
						}
					},
					{
						"Key": "ProjectName",
						"Value": {
							"Ref": "ProjectName"
						}
					},
					{
						"Key": "Environment",
						"Value": {
							"Ref": "Environment"
						}
					}
				]
			}
		},
		"PublicSubnetAZ1RouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": {
					"Ref": "PublicRouteTable"
				},
				"SubnetId": {
					"Ref": "PublicSubnetAZ1"
				}
			}
		},
		"PublicSubnetAZ2RouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": {
					"Ref": "PublicRouteTable"
				},
				"SubnetId": {
					"Ref": "PublicSubnetAZ2"
				}
			}
		},
		"PublicSubnetAZ3RouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": {
					"Ref": "PublicRouteTable"
				},
				"SubnetId": {
					"Ref": "PublicSubnetAZ3"
				}
			}
		},
		"PrivateSubnetAZ1RouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": {
					"Ref": "PrivateRouteTable1"
				},
				"SubnetId": {
					"Ref": "PrivateSubnetAZ1"
				}
			}
		},
		"PrivateSubnetAZ2RouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": {
					"Ref": "PrivateRouteTable2"
				},
				"SubnetId": {
					"Ref": "PrivateSubnetAZ2"
				}
			}
		},
		"PrivateSubnetAZ3RouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": {
					"Ref": "PrivateRouteTable3"
				},
				"SubnetId": {
					"Ref": "PrivateSubnetAZ3"
				}
			}
		}
	},
	"Outputs": {
		"MyVPC": {
			"Description": "A reference to the created VPC",
			"Value": {
				"Ref": "MyVPC"
			}
		},
		"PublicSubnets": {
			"Description": "A list of the public subnets",
			"Value": {
				"Fn::Join": [
					", ",
					[
						{
							"Ref": "PublicSubnetAZ1"
						},
						{
							"Ref": "PublicSubnetAZ2"
						},
						{
							"Ref": "PublicSubnetAZ3"
						}
					]
				]
			}
		},
		"PrivateSubnets": {
			"Description": "A list of the private subnets",
			"Value": {
				"Fn::Join": [
					", ",
					[
						{
							"Ref": "PrivateSubnetAZ1"
						},
						{
							"Ref": "PrivateSubnetAZ2"
						},
						{
							"Ref": "PrivateSubnetAZ3"
						}
					]
				]
			}
		},
		"VPCId": {
			"Description": " VPC ID",
			"Value": {
				"Ref": "MyVPC"
			},
			"Export": {
				"Name": {
					"Fn::Sub": "${AWS::StackName}-VPCID"
				}
			}
		},
		"PublicSubnetAZ1": {
			"Description": "PublicSubnetAZ1",
			"Value": {
				"Ref": "PublicSubnetAZ1"
			},
			"Export": {
				"Name": {
					"Fn::Sub": "${AWS::StackName}-PublicSubnetAZ1ID"
				}
			}
		},
		"PublicSubnetAZ2": {
			"Description": "PublicSubnetAZ2",
			"Value": {
				"Ref": "PublicSubnetAZ2"
			},
			"Export": {
				"Name": {
					"Fn::Sub": "${AWS::StackName}-SecuritySubnetAZ2ID"
				}
			}
		},
		"PublicSubnetAZ3": {
			"Description": "PublicSubnetAZ2",
			"Value": {
				"Ref": "PublicSubnetAZ2"
			},
			"Export": {
				"Name": {
					"Fn::Sub": "${AWS::StackName}-SecuritySubnetAZ3ID"
				}
			}
		},
		"PrivateSubnetAZ1": {
			"Description": "PrivateSubnetAZ1",
			"Value": {
				"Ref": "PrivateSubnetAZ1"
			},
			"Export": {
				"Name": {
					"Fn::Sub": "${AWS::StackName}-PrivateSubnetAZ1ID"
				}
			}
		},
		"PrivateSubnetAZ2": {
			"Description": "PrivateSubnetAZ2",
			"Value": {
				"Ref": "PrivateSubnetAZ2"
			},
			"Export": {
				"Name": {
					"Fn::Sub": "${AWS::StackName}-PrivateSubnetAZ2ID"
				}
			}
		},
		"PrivateSubnetAZ3": {
			"Description": "PrivateSubnetAZ3",
			"Value": {
				"Ref": "PrivateSubnetAZ3"
			},
			"Export": {
				"Name": {
					"Fn::Sub": "${AWS::StackName}-PrivateSubnetAZ3ID"
				}
			}
		}
	}
}
